// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownEmoji should match snapshot 1`] = `
<Unknown
  context={[]}
  first={true}
  last={true}
  literal={null}
  nodeKey="5"
>
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    emojiName="smile"
    literal=":smile:"
    nodeKey="4"
  >
    <Unknown
      context={
        [
          "paragraph",
          "emoji",
        ]
      }
      literal=":smile:"
      nodeKey="3"
    />
  </Unknown>
</Unknown>
`;

exports[`MarkdownEmoji should render with hardbreaks 1`] = `
<Unknown
  context={[]}
  first={true}
  last={true}
  literal={null}
  nodeKey="22"
>
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    emojiName="fire"
    literal=":fire:"
    nodeKey="4"
  >
    <Unknown
      context={
        [
          "paragraph",
          "emoji",
        ]
      }
      literal=":fire:"
      nodeKey="3"
    />
  </Unknown>
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    literal=" "
    nodeKey="5"
  />
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    emojiName="fire"
    literal=":fire:"
    nodeKey="8"
  >
    <Unknown
      context={
        [
          "paragraph",
          "emoji",
        ]
      }
      literal=":fire:"
      nodeKey="7"
    />
  </Unknown>
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    literal=""
    nodeKey="9"
  />
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    literal={null}
    nodeKey="10"
  />
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    emojiName="fire"
    literal=":fire:"
    nodeKey="13"
  >
    <Unknown
      context={
        [
          "paragraph",
          "emoji",
        ]
      }
      literal=":fire:"
      nodeKey="12"
    />
  </Unknown>
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    literal=" "
    nodeKey="14"
  />
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    emojiName="fire"
    literal=":fire:"
    nodeKey="17"
  >
    <Unknown
      context={
        [
          "paragraph",
          "emoji",
        ]
      }
      literal=":fire:"
      nodeKey="16"
    />
  </Unknown>
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    literal=" "
    nodeKey="18"
  />
  <Unknown
    context={
      [
        "paragraph",
      ]
    }
    emojiName="fire"
    literal=":fire:"
    nodeKey="21"
  >
    <Unknown
      context={
        [
          "paragraph",
          "emoji",
        ]
      }
      literal=":fire:"
      nodeKey="20"
    />
  </Unknown>
</Unknown>
`;
